--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    tools:context="com.onlywatch.fleriche.onlywatch.GameFragment"
+    tools:context="com.onlywatch.fleriche.onlywatch.general.GameFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
