--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drwLyDrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.onlywatch.fleriche.onlywatch.HomeActivity">
+    tools:context="com.onlywatch.fleriche.onlywatch.general.HomeActivity">
 
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
