--- a/app/src/main/res/drawable/filter_button.xml
+++ b/app/src/main/res/drawable/filter_button.xml
@@ -3,14 +3,14 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="20dip" />
-            <stroke android:width="1dip" android:color="@color/colorAccent" />
+            <stroke android:width="1dip" android:color="@color/whiteGame" />
             <gradient android:angle="-90" android:startColor="@color/colorAccent" android:endColor="@color/colorAccent"  />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle"  >
             <corners android:radius="20dip" />
-            <stroke android:width="1dip" android:color="#FFFFFF" />
+            <stroke android:width="1dip" android:color="@color/white" />
             <solid android:color="@color/colorAccent"/>
         </shape>
     </item>
