--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,34 +1,70 @@
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.onlywatch.fleriche.onlywatch.general.GameFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.onlywatch.fleriche.onlywatch.general.GameFragment">
 
-    <RelativeLayout
+    <com.daimajia.slider.library.SliderLayout
+        android:id="@+id/slider"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="230dp"
+        custom:auto_cycle="true"
+        custom:indicator_visibility="visible"
+        android:background="@color/blueOverwatch"
+        custom:pager_animation="Accordion"
+        custom:pager_animation_span="1100"
+        android:elevation="4dp"/>
 
-        <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:custom="http://schemas.android.com/apk/res-auto"
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/slider">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context="com.daimajia.slider.demo.MainActivity">
+            android:layout_height="wrap_content"
+            android:background="@color/backgroundGame"
+            android:orientation="vertical">
 
-            <com.daimajia.slider.library.SliderLayout
-                android:id="@+id/slider"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/accentGame"
+                android:textSize="30sp"
+                android:textStyle="bold|italic"
+                android:layout_gravity="center_horizontal"
+                android:text="Overwatch"/>
+
+            <TextView
                 android:layout_width="match_parent"
-                custom:pager_animation="Accordion"
-                custom:auto_cycle="true"
-                custom:indicator_visibility="visible"
-                custom:pager_animation_span="1100"
-                android:layout_height="230dp"/>
+                android:layout_height="wrap_content"
+                android:textColor="@color/whiteGame"
+                android:textSize="17sp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/shape_game_fragment"
+                android:text="@string/gameIntro"
+                android:layout_marginBottom="20dp"/>
 
-        </RelativeLayout>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnBuy"
+                android:text="@string/strBuyNow"
+                android:textSize="15sp"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/white"
+                android:background="@drawable/filter_button"
+                android:layout_marginBottom="20dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"/>
 
-    </RelativeLayout>
+        </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+    </ScrollView>
 
+</RelativeLayout>
