accueil mode paysage

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,8 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.onlywatch.fleriche.onlywatch.general.GameFragment">
 
     <com.daimajia.slider.library.SliderLayout
@@ -19,12 +20,12 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/slider">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/linearLayoutGameFragment"
             android:background="@color/backgroundGame"
             android:orientation="vertical">
 
@@ -67,4 +68,4 @@
 
     </ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
