--- a/app/src/main/res/layout/activity_heroes_filter.xml
+++ b/app/src/main/res/layout/activity_heroes_filter.xml
@@ -280,6 +280,8 @@
             android:id="@+id/footerHeroFilter"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:elevation="4dp"
             android:layout_alignParentBottom="true"
             android:background="@color/blueOverwatch">
