--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -27,8 +27,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/meublance"
             android:textColor="@color/colorAccent"
             android:text="Un jour y'aura des paramètres des familles !"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/meublance"
+            android:id="@+id/deleteDB"
+            android:background="@drawable/filter_button"
+            android:text="DELETE DATABASE DES FAMILLES #TresLaSecuritance !"
+            android:textColor="@color/white"/>
 
     </RelativeLayout>
 
