--- a/app/src/main/res/layout/fragment_map_generality.xml
+++ b/app/src/main/res/layout/fragment_map_generality.xml
@@ -11,88 +11,124 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="20"
-        android:paddingTop="10dp"
         android:background="@color/blueTransparentOverwatch"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/shape_map"
                 android:id="@+id/labelMapGenerality"
-                android:layout_centerHorizontal="true">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/shape_text_right">
 
                 <TextView
+                    android:id="@+id/mapNameMapGenerality"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/mapNameMapGenerality"
+                    android:layout_centerHorizontal="true"
                     android:textColor="@color/whiteGame"
                     android:textSize="20sp"
-                    android:textStyle="bold|italic"
-                    android:layout_centerHorizontal="true"/>
+                    android:textStyle="bold|italic" />
 
                 <TextView
+                    android:id="@+id/locationLabelMapGenerality"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/mapNameMapGenerality"
-                    android:id="@+id/locationLabelMapGenerality"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/strLocation"
                     android:textColor="@color/whiteGame"
                     android:textSize="17sp"
-                    android:layout_marginRight="10dp"
-                    android:textStyle="italic"
-                    android:text="@string/strLocation"/>
+                    android:textStyle="italic" />
 
                 <TextView
+                    android:id="@+id/locationMapGenerality"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/mapNameMapGenerality"
                     android:layout_toRightOf="@id/locationLabelMapGenerality"
                     android:textColor="@color/whiteGame"
-                    android:id="@+id/locationMapGenerality"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp" />
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/locationLabelMapGenerality"
-                    android:textColor="@color/whiteGame"
                     android:id="@+id/gameModeLabelMapGenerality"
-                    android:layout_marginRight="10dp"
-                    android:textSize="17sp"
-                    android:textStyle="italic"
-                    android:text="@string/strGameMode"/>
-
-                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/locationLabelMapGenerality"
+                    android:layout_marginRight="10dp"
+                    android:text="@string/strGameMode"
+                    android:textColor="@color/whiteGame"
+                    android:textSize="17sp"
+                    android:textStyle="italic" />
+
+                <TextView
                     android:id="@+id/gameModeMapGenerality"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/locationLabelMapGenerality"
                     android:layout_toRightOf="@id/gameModeLabelMapGenerality"
                     android:textColor="@color/whiteGame"
-                    android:textSize="17sp"/>
+                    android:textSize="17sp" />
 
             </RelativeLayout>
 
             <TextView
+                android:id="@+id/tvLabelDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvDescription"
                 android:layout_below="@id/labelMapGenerality"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="20dp"
                 android:text="@string/strDescription"
-                android:textColor="@color/colorAccent"
-                android:textSize="25sp"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
+                android:id="@+id/tvDescriptionMapGenerality"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tvDescription"
+                android:layout_below="@id/tvLabelDescription"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/shape_text_left"
+                android:paddingTop="5dp"
                 android:textColor="@color/white"
-                android:textSize="30sp"
-                android:paddingTop="5dp"/>
+                android:textSize="15sp" />
+
+
+            <TextView
+                android:id="@+id/tvLabelBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/tvDescriptionMapGenerality"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="20dp"
+                android:text="@string/strBackground"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/tvBackgroundMapGenerality"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvLabelBackground"
+                android:background="@drawable/shape_text_right"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:paddingTop="5dp"
+                android:textColor="@color/white"
+                android:textSize="15sp" />
 
         </RelativeLayout>
 
