--- a/app/src/main/res/layout/fragment_maps_list.xml
+++ b/app/src/main/res/layout/fragment_maps_list.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="2dp"
-    android:paddingRight="2dp"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:paddingRight="2dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/mapCardList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabMapsList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_account_search"
+        app:layout_anchor="@id/mapCardList"
+        app:layout_anchorGravity="bottom|right|end"
+        app:layout_behavior="com.onlywatch.fleriche.onlywatch.tools.ScrollAwareFABBehavior" />
+
+</android.support.design.widget.CoordinatorLayout>
