--- a/app/src/main/res/layout/fragment_maps_list.xml
+++ b/app/src/main/res/layout/fragment_maps_list.xml
@@ -13,6 +13,17 @@
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/strNoFavoritesMaps"
+        android:id="@+id/tvNoFavoritesMaps"
+        android:background="@drawable/shape_text_right"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabMapsList"
         android:layout_width="wrap_content"
