--- a/app/src/main/res/layout/language_item.xml
+++ b/app/src/main/res/layout/language_item.xml
@@ -3,10 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:addStatesFromChildren="true"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp"
     android:background="@drawable/drawer_list_selector">
 
     <ImageView
-        android:id="@+id/drwIcon"
+        android:id="@+id/flagLanguage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
@@ -15,13 +17,14 @@
         android:layout_centerInParent="true"/>
 
     <TextView
-        android:id="@+id/drwTitle"
+        android:id="@+id/titleLanguage"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:layout_toRightOf="@+id/drwIcon"
+        android:layout_toRightOf="@+id/flagLanguage"
         android:textColor="@color/greyOverwatch"
         android:textStyle="bold"
+        android:textSize="25sp"
         android:layout_marginLeft="72dp"
         android:gravity="center"/>
 
