--- a/app/src/main/res/layout/cardview_heroe_front.xml
+++ b/app/src/main/res/layout/cardview_heroe_front.xml
@@ -18,7 +18,8 @@
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/blueOverwatch">
 
             <ImageView
                 android:layout_width="match_parent"
