--- a/app/src/main/res/layout/fragment_medias2.xml
+++ b/app/src/main/res/layout/fragment_medias2.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:name="com.onlywatch.fleriche.onlywatch.medias.MediasFragment$VideoListFragment"
-        android:id="@+id/list_fragment"
+        android:id="@+id/videoListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -20,7 +20,7 @@
 
         <fragment
             android:name="com.onlywatch.fleriche.onlywatch.medias.MediasFragment$VideoFragment"
-            android:id="@+id/video_fragment_container"
+            android:id="@+id/videoFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
