--- a/app/src/main/res/layout/fragment_skills_list.xml
+++ b/app/src/main/res/layout/fragment_skills_list.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/mapCardList"
+        android:id="@+id/skillsCardList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
@@ -16,8 +16,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/strNoFavoritesHeroes"
-        android:id="@+id/tvNoFavoritesHeroes"
+        android:text="@string/strNoFavoritesAbilities"
+        android:id="@+id/tvNoFavoritesSkills"
         android:background="@drawable/shape_text_right"
         android:textColor="@color/white"
         android:gravity="center"
@@ -31,7 +31,7 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:src="@drawable/ic_account_search"
-        app:layout_anchor="@id/mapCardList"
+        app:layout_anchor="@id/skillsCardList"
         app:layout_anchorGravity="bottom|right|end"
         app:layout_behavior="com.onlywatch.fleriche.onlywatch.tools.ScrollAwareFABBehavior"/>
 
